# LCSAR

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/examples/: run_core_demo.py
src/lcsar/: __init__.py  lcsar.py  rws.py  simulation.py
